tests/baselines/reference/unusedTypeParametersCheckedByNoUnusedParameters.errors.txt
tests/cases/compiler/unusedTypeParametersCheckedByNoUnusedParameters.ts(1,12): error TS6133: 'T' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersCheckedByNoUnusedParameters.ts(3,8): error TS6133: 'T' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersCheckedByNoUnusedParameters.ts(5,13): error TS6133: 'T' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersCheckedByNoUnusedParameters.ts(7,9): error TS6133: 'T' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersCheckedByNoUnusedParameters.ts(8,14): error TS6133: 'V' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersCheckedByNoUnusedParameters.ts(11,10): error TS6133: 'T' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParametersCheckedByNoUnusedParameters.ts (6 errors) ====
    function f<T>() { }
               ~
!!! error TS6133: 'T' is declared but its value is never read.
    
    type T<T> = { };
           ~
!!! error TS6133: 'T' is declared but its value is never read.
    
    interface I<T> { };
                ~
!!! error TS6133: 'T' is declared but its value is never read.
    
    class C<T> {
            ~
!!! error TS6133: 'T' is declared but its value is never read.
        public m<V>() { }
                 ~
!!! error TS6133: 'V' is declared but its value is never read.
    };
    
    let l = <T>() => { };
             ~
!!! error TS6133: 'T' is declared but its value is never read.
    